Use own inventory implementation.